Add ENDPOINT as config param in examples.

--- a/examples/viewer/index.html
+++ b/examples/viewer/index.html
@@ -65,7 +65,7 @@
 
         <p>
             <label for="endpoint">Maps API endpoint</label>
-            <input type="text" name="endpoint" id="endpoint" value="http://development.localhost.lan:8181/api/v1/map">
+            <input type="text" name="endpoint" id="endpoint" value="YOUR MAP API ENDPOINT">
         </p>
 
         <p>
